Add build script for production

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server",
-    "build:dev": "webpack"
+    "build:dev": "webpack",
+    "build": "webpack -p"
   }
 }
