--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
     "http-server": "^0.10.0",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
