--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
+    "css-loader": "^0.28.4",
     "http-server": "^0.10.0",
+    "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
   },
