--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "private": true,
   "dependencies": {
     "director": "^1.2.0",
-    "vue": "^2.1.8",
+    "lodash": "^4.17.4",
+    "todomvc-app-css": "^2.0.0",
     "todomvc-common": "^1.0.1",
-    "todomvc-app-css": "^2.0.0"
+    "vue": "^2.1.8"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
